[tool.poetry]
name = "respplus"
version = "0.1.1"
description = ""
authors = ["Kotaro SONODA <kotaro1976@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sounddevice = "^0.4.6"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
llvmlite = "^0.41.0"
librosa = "^0.10.1"
pyqtgraph = "^0.13.3"
pyqt6 = "^6.5.2"
numpy = "^1.23"
pyaudio = "^0.2.13"
nuitka = "^1.8.3"
kivy = "^2.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test6 = 'test6:main'
